# openai_realtime_voice_chat_vibe

./: .gitignore  README.md  main.py  pyproject.toml  voice_app.py  프롬프티_모음.txt
.github/: claude-instuctions.md
day02/: 12-vibe-coding-1-add-tool.md  13-vibe-coding-2-save-conversation.md  14-wrap-up-review.md
src/voice_agent/adapter/: async_connection.py  async_realtime.py  async_websocket.py  audio_output.py  currency.py  function_call.py  length.py  model_summarizer.py  openai_realtime.py  realtime_connection.py  realtime_tools.py  safe_math.py  temperature.py  tools.py  transcript.py  transcript_store.py  websocket_connection.py
src/voice_agent/domain/: audio_frame.py  conversation.py  rate_limiter.py  session_config.py  summary.py  tool_guard.py  tool_spec.py  tool_toggle.py  (+1 more)
static/: app.js  index.html
tests/adapter/: fakes.py  test_async_realtime.py  test_audio_output.py  test_currency.py  test_dispatch.py  test_function_call.py  test_length.py  test_openai_realtime.py  test_realtime_tools.py  test_safe_math.py  test_temperature.py  test_tools.py  test_transcript.py  test_transcript_store.py  test_usecase_with_adapter.py
tests/domain/: test_audio_frame.py  test_conversation.py  test_rate_limiter.py  test_session_config.py  test_summarize.py  test_tool_guard.py  test_tool_spec.py  test_tool_toggle.py  test_turn.py
tests/infra/: test_transcript_bus.py  test_voice_handler.py
tests/usecase/: fakes.py  test_list_active_tools.py  test_save_conversation.py  test_send_user_utterance.py  test_start_conversation.py
transcripts/: 2c3fb7c8.md  bb56178a.md
(+7 files in other folders)
